--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,7 +5,8 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/TestingLevel.TestingLevel
 GameDefaultMap=/Game/LandscapeMountains/Maps/LandscapeMap.LandscapeMap
-GlobalDefaultGameMode="/Script/SurvivalGame.SurvivalGameGameMode"
+GlobalDefaultGameMode=/Game/Blueprints/Framework/BP_SurvivalGameGameModeBase.BP_SurvivalGameGameModeBase_C
+GameInstanceClass=/Game/Blueprints/Framework/BP_SurvivalGameInstance.BP_SurvivalGameInstance_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
